fix(toolbar-frame): don't wrap items when feed title is too long
regression from commit 8d9186a0 changing toolbars to flex

--- a/src/_toolbar-frame.less
+++ b/src/_toolbar-frame.less
@@ -10,6 +10,7 @@
   });
 
   .dijitToolbar {
+    flex-wrap: nowrap;
     margin: 0;
     padding: 0;
     border: none;
